# canon

./: .env.example  .gitignore  README.md  docker-compose.yml  skills-lock.json
.github/workflows/: backend-cd.yml  backend-ci.yml  frontend-cd.yml  frontend-ci.yml  mcp-cd.yml  mcp-ci.yml
backend/: .dockerignore  Dockerfile  Dockerfile.production  main.py  pyproject.toml
backend/canon_mcp/: dependencies.py
backend/canon_mcp/mcp/: agents.py  plugin.py  runner.py  server.py
backend/canon_mcp/repositories/: agent_events.py
backend/canon_mcp/routers/: sessions.py  teams.py
backend/canon_mcp/services/: event_feed.py  jwt.py
backend/scripts/seed/: clear_and_check.py  generate_seed.py  insert_seed.py  node_definitions.py
backend/scripts/seed/payments/: main.py
backend/scripts/seed/seed_data/: nodes.json
backend/src/: config.py  constants.py  dependencies.py  error_handlers.py  lifespan.py
backend/src/agent/: agent_platform.py  constants.py  embedding_utils.py  models.py  mongo_toolset.py  runner.py
backend/src/agent/agents/: graph_explorer.py  orchestrator.py  semantic_retriever.py
backend/src/agent/plugins/: ambient_context.py
backend/src/agent/tools/: canonize_node.py  emit_checkpoint.py  hybrid_search.py  trace_graph.py
backend/src/mcp/: agent_platform.py  agents.py  ambient_context.py  constants.py  context.py  middleware.py  models.py  mongo_connections.py  plugin.py  provider.py  request_context.py  response.py  runner.py  server.py  session.py  session_provider.py  tools.py  utils.py
backend/src/mcp/components/: tools.py
backend/src/mcp/components/prompts/: before_implementing.py  reflect_session.py
backend/src/mcp/components/resources/: org_momentum.py  org_state.py
backend/src/mcp/middlewares/: __init__.py  auth.py  request_context.py
backend/src/mcp/plugins/: ambient_context.py  reasoning_feed.py
backend/src/mcp/prompts/: __init__.py  before_implementing.py  reflect_session.py  remember_decision.py
backend/src/mcp/resources/: __init__.py  org_momentum.py  org_state.py
backend/src/models/: __init__.py  documents.py  schemas.py
backend/src/models/schemas/: __init__.py  _base.py  agent.py  auth.py  events.py  graph.py  sessions.py  teams.py
backend/src/repositories/: agent_events.py
backend/src/routers/: agent.py  auth.py  graph.py  prompts.py  resources.py  sessions.py  teams.py
backend/src/services/: __init__.py  auth.py  event_feed.py  jwt.py  mongo.py  sessions.py  tenant_resolver.py
frontend/: .dockerignore  DESIGN.md  Dockerfile  Dockerfile.production  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts
frontend/app/: error.tsx  globals.css  layout.tsx  manifest.json  not-found.tsx  page.tsx
frontend/hooks/: useEventSource.ts  useEventStream.ts  useGraphDimensions.ts  useReducedMotion.ts
local/: .env.example  canon  docker-compose.yml  init.sh
mcp/: .gitignore  README.md  main.py  pyproject.toml
mcp/src/: config.py  constants.py  instructions.py  main.py  sse.py
mcp/src/components/: prompts.py  resources.py  tools.py
(+145 files in other folders)
