[project]
name = "canon-mcp-server"
version = "0.1.0"
description = "canon mcp server"
requires-python = ">=3.12"
dependencies = ["fastmcp>=3.3.1", "httpx>=0.28.0", "pydantic-settings>=2.0", "sse-starlette>=2.2.0"]

[project.scripts]
canon-mcp = "main:main"

[dependency-groups]
dev = ["ruff>=0.15.14"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
