[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canon-mcp-server"
version = "0.2.0"
description = "MCP server that connects AI coding assistants to your team's organizational memory in canon — active migrations, deprecated patterns, architecture decisions, prior failures, and the context behind why things are the way they are."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=3.3.1",
  "httpx>=0.28.0",
  "pydantic-settings>=2.0",
  "sse-starlette>=2.2.0",
]

[project.scripts]
canon-mcp = "src.main:main"

[project.urls]
Repository = "https://github.com/zion-off/canon"

[dependency-groups]
dev = ["ruff>=0.15.14"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
